Remove JSAutoRequest from Handle::ToJSObject (bug 628930, r=jst).